--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,9 +1,10 @@
 ---
 title: "I nostri servizi"
 heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
+backgroundImage: "images/forging.jpeg"
 ---
 
-<section class="max-w-screen-xl mx-auto">
+<section class="max-w-screen-xl mx-auto shadow-xl">
   <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
     <div class="relative mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3">
       <a href="#manutenzione" class="p-4 hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200">
@@ -27,7 +28,7 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 
 <!-- Manutenzione -->
 <section id="manutenzione">
-  <div class="max-w-screen-xl mx-auto">
+  <div class="max-w-screen-xl mx-auto hero-bg-gradient">
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
 
       <h2 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal red-title uppercase">Manutenzione</h2>
@@ -62,44 +63,51 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
 
       <!-- Digital Service -->
-      <div class="relative flex lg:justify-center">
-        <img class="hidden lg:flex lg:mr-8 h-72 shrink-0" src="https://www.areatecnica.it/img/atds-mockup.png" alt="">
-        <div class="prose">
-          <h3 class="mb-8 text-black text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
-          <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
-          <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
-        </div>
-      </div>
+      {{< two-col title="Centro Cilindri Digital Service" image="atds-mockup.png" >}}
+        <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
+        <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
+      {{< /two-col >}}
     </div>
   </div>
 
 </section>
 
 <!-- Produzione -->
-<section id="produzione" class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-  <h2 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal red-title uppercase">Produzione</h2>
-  <div class="prose">
-    <!-- Progettazione e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno -->
-    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Progettazione, reverse engineering e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno</h3>
-    <p>Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
-    <p>Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi.</p>
-    <p>Le fasi di produzione dei singoli componenti meccanici dei cilindri, quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi, siano essi destinati a riparazioni o per nuovi cilindri, avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
-    <p>Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri o i vostri ricambi meccanici partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani.</p>
-    <p>Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede.</p>
+<section id="produzione" class="max-w-screen-xl mx-auto hero-bg-gradient">
+  <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
+    <h2 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal red-title uppercase">Produzione</h2>
+
+    {{< two-col title="Progettazione, reverse engineering e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno" image="atds-mockup.png" isReversed=true >}}
+      <p>Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
+      <p>Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi.</p>
+      <p>Le fasi di produzione dei singoli componenti meccanici dei cilindri, quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi, siano essi destinati a riparazioni o per nuovi cilindri, avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
+    {{< /two-col >}}
+    <div class="prose">
+      <p>Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri o i vostri ricambi meccanici partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani.</p>
+      <p>Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede.</p>
+    </div>
   </div>
 </section>
 
 
 <!-- Ricambi -->
 <section id="ricambi">
-  <div class="max-w-screen-xl mx-auto">
+  <div class="max-w-screen-xl mx-auto hero-bg-gradient">
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
       <h2 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal red-title uppercase">Ricambi</h2>
-      <div class="prose">
+
+
         <!-- Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche -->
-        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h3>
+      <div class="relative flex lg:justify-center mb-8">
+        <div class="prose">
+          <h3 class="mb-8 text-2xl sm:text-3xl font-bold tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h3>
         <p>Siamo esperti in guarnizioni per oleodinamica e pneumatica perché conosciamo bene i punti critici di un cilindro e le attenzioni che bisogna avere durante la loro manutenzione. Il nostro core business è la riparazione di cilindri esistenti: da qui nasce l’estrema attenzione che poniamo sul sistema di tenuta, per offrire al cliente industriale soluzioni chiavi in mano ad altissima affidabilità.</p>
         <p>Quando il cliente effettua internamente la manutenzione dei cilindri, lo supportiamo con il nostro personale tecnico offrendo assistenza sul campo nelle fasi di smontaggio del cilindro, rilevazione dimensioni e tipologia guarnizioni sulla base delle condizioni di lavoro, e durante il montaggio finale.</p>
+        </div>
+        <img class="hidden lg:flex lg:ml-8 h-72 shrink-0 shadow-lg ring-1 ring-black ring-opacity-5" src="https://flowbite.com/marketing-ui/demo/images/billing-mockup.png" alt="">
+      </div>
+
+      <div class="prose">
         <p>Il nostro servizio specializzato, valido per tutti i cilindri idraulici/pneumatici e le presse presenti sul mercato, comprende.</p>
         <ul>
           <li><strong class="font-semibold">Assistenza in stabilimento</strong> con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni</li>
