--- a/content/servizi2.html
+++ b/content/servizi2.html
@@ -30,58 +30,30 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
         <div class="flex flex-row overflow-x-auto space-x-8">
           <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
             <img src="/images/riparazione-cilindri.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
-            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-sm leading-6 text-gray-200">Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</div>
+            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/70" aria-hidden="true"></div>
+            <div class="text-base leading-7 text-gray-200 text-shadow">Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</div>
           </div>
 
           <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
             <img src="/images/cilindri-telescopici.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
             <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-sm leading-6 text-gray-200">Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</div>
+            <div class="text-base leading-7 text-gray-200 text-shadow">Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</div>
           </div>
 
           <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
             <img src="/images/ref-3.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
             <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-sm leading-6 text-gray-200">Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</div>
+            <div class="text-base leading-7 text-gray-200 text-shadow">Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</div>
+          </div>
+
+          <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
+            <img src="/images/scudo.png" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
+            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
+            <div class="text-base leading-7 text-gray-200 text-shadow">Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</div>
           </div>
         </div>
       </div>
 
-    </div>
-  </div>
-
-  <div class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0">
-    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
-      <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-        <div class="lg:pr-4">
-          <div class="lg:max-w-lg">
-          </div>
-        </div>
-      </div>
-      <div class="-ml-12 -mt-12 p-12 lg:sticky lg:top-4 lg:col-start-2 lg:row-span-2 lg:row-start-1 lg:overflow-hidden">
-        <img src="/images/riparazione-cilindri.jpg" class="rounded-xl bg-gray-900 shadow-xl ring-1 ring-gray-400/10" alt="Riparazione cilindri idraulici e pneumatici">
-      </div>
-      <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-        <div class="lg:pr-4">
-          <div class="max-w-xl lg:max-w-lg text-base space-y-4 leading-7 text-gray-600">
-            <p class="bg-yellow-400/80"></p>
-            <p></p>
-            <p></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
-    <img src="/images/scudo.png" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center">
-    <div class="absolute w-full h-full inset-0 -z-10 bg-black/60 transform-gpu lg:blur-3xl" aria-hidden="true"></div>
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Il tempo è denaro</h2>
-        <p class="mt-6 text-base leading-8 text-gray-300">Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
-      </div>
     </div>
   </div>
 
